tests/pass/0050_if_not_taken.ee
fn main() {
    if (0) {
        debugPrint(1);
    }
    debugPrint(2);
}
