tests/fail/0028_unknown_variable_in_if_condition.ee
fn main() {
    if (missing) {
        debugPrint(1);
    }
}
